--- a/src/Assets/Control/Pills/MRUD.html
+++ b/src/Assets/Control/Pills/MRUD.html
@@ -1,4 +1,4 @@
-<div class="btn-toolbar btn-group-sm">
+<div class="btn-toolbar btn-group-sm hidden-print">
 <if value="<k>Status</k>" neq="1">
     <a class="btn btn-default" href="/control/<call>Entity</call>/Allow/<k>ID</k>">
         <i class="glyphicon glyphicon-ok" data-toggle="tooltip" title="Одобрить"></i>
