--- a/src/Assets/Control/Pills/RUD.html
+++ b/src/Assets/Control/Pills/RUD.html
@@ -1,4 +1,4 @@
-<div class="btn-toolbar btn-group-sm">
+<div class="btn-toolbar btn-group-sm hidden-print">
     <a class="btn btn-default"
        href="/control/<call>Entity</call>/Touch/<k>ID</k>">
         <i class="icon glyphicon glyphicon-refresh" data-toggle="tooltip" title="Обновить"></i>
