--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,4 +1,4 @@
-<div class="topbar btn-group-vertical btn-group-lg">
+<div class="topbar btn-group-vertical btn-group-lg hidden-print">
     <a class="btn btn-primary"
        href="/control/<call>Entity</call>">
         <i class="icon glyphicon glyphicon-wrench" data-toggle="tooltip" title="ЦУП"></i>
