--- a/src/Assets/bootstrap3/Widgets/Form/Checkbox.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Checkbox.html
@@ -1,6 +1,6 @@
 <div class="checkbox">
     <label>
-        <input id="<k>ID</k>" type="checkbox" name="<k>Name</k>" value="<k>TrueValue</k>"
+        <input id="<k>ID</k>" type="checkbox" name="<k>Name</k>" value="<k>Value</k>"
             <block>checked="<k>Checked</k>"</block>
             <block>required="<k>Required</k>"</block> />
             <k>Label</k>
