--- a/src/Assets/Article/Author.html
+++ b/src/Assets/Article/Author.html
@@ -1,6 +1,6 @@
-<subtitle><far>User:<call>Where.User</call>:Fullname</far></subtitle>
-<breadcrumb href="/articles/category/<call>Where.User</call>"><far>User:<call>Where.User</call>:Fullname</far></breadcrumb>
-<h2 class="page-header">Автор: <far>User:<call>Where.User</call>:Fullname</far></entity></h2>
+<subtitle><far>User:<call>Where.User</call>:Title</far></subtitle>
+<breadcrumb href="/articles/category/<call>Where.User</call>"><far>User:<call>Where.User</call>:Title</far></breadcrumb>
+<h2 class="page-header">Автор: <far>User:<call>Where.User</call>:Title</far></entity></h2>
 
 <div class="row">
     <div class="col-md-8"><place>Content</place></div>
