--- a/src/Assets/Article/Catalog/User.html
+++ b/src/Assets/Article/Catalog/User.html
@@ -1,5 +1,5 @@
 <li>
     <a href="/articles/author/<k>Value</k>">
-        <far>User:<k>Value</k>:Fullname</far><span class="pull-right"><k>Count</k></span>
+        <far>User:<k>Value</k>:Title</far><span class="pull-right"><k>Count</k></span>
     </a>
 </li>
