--- a/src/Assets/Article/Show/Full.html
+++ b/src/Assets/Article/Show/Full.html
@@ -15,7 +15,7 @@
                 </article>
             </div>
             <div class="panel-footer">
-                <a href="/articles/author/<k>User</k>"><far>User:<k>User</k>:Fullname</far></a>
+                <a href="/articles/author/<k>User</k>"><far>User:<k>User</k>:Title</far></a>
 
                 <div class="pull-right">
                     <datetime><k>Created</k></datetime>
