--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -12,7 +12,7 @@
 <subtitle><l><call>Bundle</call>.Control:Options.<call>Option</call></l></subtitle>
 
 
-<nav class="navbar navbar-danger" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
               <span class="sr-only">Навигация</span>
