--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -1,4 +1,4 @@
-<h1>Приветствуем, <k>Data.Fullname</k>!</h1>
+<h1>Приветствуем, <k>Data.Title</k>!</h1>
 
 <p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
 
