--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-md-11">
                 <h2>
-                    <k>Fullname</k>
+                    <k>Title</k>
                 </h2>
                 <h4>
                     <k>Location</k>
