--- a/src/Assets/User/Reset/EMail.html
+++ b/src/Assets/User/Reset/EMail.html
@@ -1,6 +1,6 @@
 <img src="<k>Host</k>/img/logo.png" style="float: right;"/>
 
-<h1>Приветствуем, <k>Fullname</k>!</h1>
+<h1>Приветствуем, <k>Title</k>!</h1>
 
 Кто-то, возможно вы, запросил изменение пароля.
 
