--- a/src/Assets/User/Show/Cabinet.app.html
+++ b/src/Assets/User/Show/Cabinet.app.html
@@ -1,7 +1,7 @@
 <ul class="nav navbar-nav navbar-right">
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <k>Fullname</k>
+            <k>Title</k>
             <b class="caret"></b></a>
         <ul class="dropdown-menu">
             <access Service="Control.Panel" Method="Do">
