--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -1,7 +1,7 @@
 <breadcrumb href="/cabinet">Кабинет</breadcrumb>
 <subtitle>Кабинет</subtitle>
 
-<h2 class="page-header"><k>Fullname</k></h2>
+<h2 class="page-header"><k>Title</k></h2>
 <div class="row">
     <div class="col-md-3">
         <ul class="nav nav-stacked">
