--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -1,5 +1,5 @@
-<subtitle><k>Fullname</k></subtitle>
-<breadcrumb href="/user/<k>ID</k>"><k>Fullname</k></breadcrumb>
+<subtitle><k>Title</k></subtitle>
+<breadcrumb href="/user/<k>ID</k>"><k>Title</k></breadcrumb>
 
 <div class="panel panel-default">
     <div class="panel-body">
@@ -20,7 +20,7 @@
             </div>
             <div class="col-md-10">
                 <h2>
-                    <k>Fullname</k>
+                    <k>Title</k>
                 </h2>
                 <h4>
                     <k>Location</k>
