--- a/src/Assets/Session/Show/Cabinet.app.html
+++ b/src/Assets/Session/Show/Cabinet.app.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav nav-cabinet pull-right">
+<ul class="nav navbar-nav navbar-right">
     <li><a href="/login"><l>User.Login:Title</l></a></li>
     <li><a href="/join"><l>User.Create:Title</l></a></li>
 </ul>
