--- a/src/Assets/User/Control/Show/Short.html
+++ b/src/Assets/User/Control/Show/Short.html
@@ -2,7 +2,7 @@
     <div class="pull-right">
         <layout>Control:Pills/RUD</layout>
     </div>
-    <h4><k>Fullname</k></h4>
+    <h4><k>Title</k></h4>
     <div>EMail: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
     <div><datetime><k>Created</k></datetime></div>
 </li>
