--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -2,6 +2,8 @@
 
 <p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
 
-<div style="margin-bottom: 4px;"><a target="_blank" href="<k>URLActivation</k>">Щелкните для активации</a></div>
+<div style="margin-bottom: 4px;"><a target="_blank" href="<call>Proto</call><call>Host</call>/activate/<k>Code</k>">
+    Щелкните для активации</a>
+</div>
 <strong>или</strong>
 <div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: <k>URLActivation</k></div>
