--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -1,8 +1,8 @@
 <h1>Приветствуем, <k>Title</k>!</h1>
 
-<p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
+<p>Вы успешно зарегистрировались в проекте <strong><a href="<k>HTTP.Proto</k><k>HTTP.Host</k>"><k>Project.Title</k></a></strong>.</p>
 
-<div style="margin-bottom: 4px;"><a target="_blank" href="<call>Proto</call><call>Host</call>/activate/<k>Code</k>">
+<div style="margin-bottom: 4px;"><a target="_blank" href="<call>HTTP.Proto</call><call>HTTP.Host</call>/activate/<k>Code</k>">
     Щелкните для активации</a>
 </div>
 <strong>или</strong>
