--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -1,9 +1,22 @@
-<h1>Приветствуем, <k>Title</k>!</h1>
+<h2>Приветствуем, <k>Title</k>!</h2>
 
-<p>Вы успешно зарегистрировались в проекте <strong><a href="<k>HTTP.Proto</k><k>HTTP.Host</k>"><k>Project.Title</k></a></strong>.</p>
+<p>Вы успешно зарегистрировались в проекте
+    <strong>
+        <a href="<call>HTTP.Proto</call><call>HTTP.Host</call>">
+            <call>Project.Title</call>
+        </a>
+    </strong>
+</p>
+
+    Ваш пароль:
+    <div style="width: 140px; border: 1px solid #cccccc; text-align:center; font-size: 2em; padding: 4px; margin: auto;"> <k>Password</k></div>
 
 <div style="margin-bottom: 4px;"><a target="_blank" href="<call>HTTP.Proto</call><call>HTTP.Host</call>/activate/<k>Code</k>">
-    Щелкните для активации</a>
+    Щелкните для активации аккаунта </a>
 </div>
+
 <strong>или</strong>
-<div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: <k>URLActivation</k></div>
+
+<div style="margin-top: 4px;">
+    Скопируйте эту ссылку в окно браузера: <k>URLActivation</k>
+</div>
