--- a/src/Assets/Session/Show/Cabinet.html
+++ b/src/Assets/Session/Show/Cabinet.html
@@ -1,18 +1,5 @@
-<h2>Войдите</h2>
-    <exec>
-        <Service>User.Authenticate</Service>
-        <Method>Do</Method>
-    </exec>
-
-<h2>Или зарегистрируйтесь</h2>
-<div class="panel">
-    <exec>
-        <Service>Entity.Create</Service>
-        <Method>Do</Method>
-        <Call>
-            <Action>/join</Action>
-            <OnlyRequired>true</OnlyRequired>
-            <Entity>User</Entity>
-        </Call>
-    </exec>
+<div class="alert alert-warning">
+    <h4><l>User.Login:Unauthorized</l></h4>
 </div>
+<a class="btn btn-default" href="/login"><l>User.Login:Title</l></a>
+<a class="btn btn-default" href="/join"><l>User.Create:Title</l></a>
