--- a/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
+++ b/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
@@ -9,7 +9,7 @@
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#<k>ID</k>">
         <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font"><i
-                    class="icon-font"></i><b class="caret"></b></a>
+                    class="fa fa-font"></i><b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a data-edit="fontName Serif" style="font-family:'Serif'">Serif</a></li>
                 <li><a data-edit="fontName Sans" style="font-family:'Sans'">Sans</a></li>
@@ -31,7 +31,7 @@
         </div>
         <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font Size"><i
-                    class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
+                    class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
                 <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
@@ -40,59 +40,58 @@
         </div>
         <div class="btn-group">
             <a class="btn" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i
-                    class="icon-bold"></i></a>
+                    class="fa fa-bold"></i></a>
             <a class="btn" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i
-                    class="icon-italic"></i></a>
+                    class="fa fa-italic"></i></a>
             <a class="btn" data-edit="strikethrough" title="" data-original-title="Strikethrough"><i
-                    class="icon-strikethrough"></i></a>
+                    class="fa fa-strikethrough"></i></a>
             <a class="btn" data-edit="underline" title="" data-original-title="Underline (Ctrl/Cmd+U)"><i
-                    class="icon-underline"></i></a>
+                    class="fa fa-underline"></i></a>
         </div>
         <div class="btn-group">
             <a class="btn" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i
-                    class="icon-list-ul"></i></a>
+                    class="fa fa-list-ul"></i></a>
             <a class="btn btn-info" data-edit="insertorderedlist" title="" data-original-title="Number list"><i
-                    class="icon-list-ol"></i></a>
+                    class="fa fa-list-ol"></i></a>
             <a class="btn" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i
-                    class="icon-indent-left"></i></a>
+                    class="fa fa-outdent"></i></a>
             <a class="btn" data-edit="indent" title="" data-original-title="Indent (Tab)"><i
-                    class="icon-indent-right"></i></a>
+                    class="fa fa-indent"></i></a>
         </div>
         <div class="btn-group">
             <a class="btn btn-info" data-edit="justifyleft" title="" data-original-title="Align Left (Ctrl/Cmd+L)"><i
-                    class="icon-align-left"></i></a>
+                    class="fa fa-align-left"></i></a>
             <a class="btn" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i
-                    class="icon-align-center"></i></a>
+                    class="fa fa-align-center"></i></a>
             <a class="btn" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i
-                    class="icon-align-right"></i></a>
+                    class="fa fa-align-right"></i></a>
             <a class="btn" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i
-                    class="icon-align-justify"></i></a>
+                    class="fa fa-align-justify"></i></a>
         </div>
         <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i
-                    class="icon-link"></i></a>
+                    class="fa fa-link"></i></a>
 
             <div class="dropdown-menu input-append">
                 <input class="col-md-2" placeholder="URL" type="text" data-edit="createLink">
                 <button class="btn" type="button">Add</button>
             </div>
             <a class="btn" data-edit="unlink" title="" data-original-title="Remove Hyperlink"><i
-                    class="icon-cut"></i></a>
+                    class="fa fa-cut"></i></a>
 
         </div>
 
         <div class="btn-group">
             <a class="btn" title="" id="pictureBtn" data-original-title="Insert picture (or just drag &amp; drop)"><i
-                    class="icon-picture"></i></a>
+                    class="fa fa-picture"></i></a>
             <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage"
                    style="opacity: 0; position: absolute; top: 0px; left: 0px; width: 34px; height: 30px;">
         </div>
         <div class="btn-group">
             <a class="btn" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i
-                    class="icon-undo"></i></a>
-            <a class="btn" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i></a>
+                    class="fa fa-undo"></i></a>
+            <a class="btn" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
         </div>
-        <input type="text" data-edit="inserttext" id="voiceBtn" x-webkit-speech="">
     </div>
     <div class="editor form-control" id="<k>ID</k>">
         <k>Value</k>
