--- a/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
+++ b/src/Assets/bootstrap3/Widgets/Form/WYSIWYG.html
@@ -8,7 +8,7 @@
 
     <div class="btn-toolbar" data-role="editor-toolbar" data-target="#<k>ID</k>">
         <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font"><i
+            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font"><i
                     class="fa fa-font"></i><b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a data-edit="fontName Serif" style="font-family:'Serif'">Serif</a></li>
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div class="btn-group">
-            <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font Size"><i
+            <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Font Size"><i
                     class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
@@ -39,58 +39,45 @@
             </ul>
         </div>
         <div class="btn-group">
-            <a class="btn" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i
+            <a class="btn btn-default" data-edit="bold" title="" data-original-title="Bold (Ctrl/Cmd+B)"><i
                     class="fa fa-bold"></i></a>
-            <a class="btn" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i
+            <a class="btn btn-default" data-edit="italic" title="" data-original-title="Italic (Ctrl/Cmd+I)"><i
                     class="fa fa-italic"></i></a>
-            <a class="btn" data-edit="strikethrough" title="" data-original-title="Strikethrough"><i
+            <a class="btn btn-default" data-edit="strikethrough" title="" data-original-title="Strikethrough"><i
                     class="fa fa-strikethrough"></i></a>
-            <a class="btn" data-edit="underline" title="" data-original-title="Underline (Ctrl/Cmd+U)"><i
+            <a class="btn btn-default" data-edit="underline" title="" data-original-title="Underline (Ctrl/Cmd+U)"><i
                     class="fa fa-underline"></i></a>
         </div>
         <div class="btn-group">
-            <a class="btn" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i
+            <a class="btn btn-default" data-edit="insertunorderedlist" title="" data-original-title="Bullet list"><i
                     class="fa fa-list-ul"></i></a>
             <a class="btn btn-info" data-edit="insertorderedlist" title="" data-original-title="Number list"><i
                     class="fa fa-list-ol"></i></a>
-            <a class="btn" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i
+            <a class="btn btn-default" data-edit="outdent" title="" data-original-title="Reduce indent (Shift+Tab)"><i
                     class="fa fa-outdent"></i></a>
-            <a class="btn" data-edit="indent" title="" data-original-title="Indent (Tab)"><i
+            <a class="btn btn-default" data-edit="indent" title="" data-original-title="Indent (Tab)"><i
                     class="fa fa-indent"></i></a>
         </div>
         <div class="btn-group">
             <a class="btn btn-info" data-edit="justifyleft" title="" data-original-title="Align Left (Ctrl/Cmd+L)"><i
                     class="fa fa-align-left"></i></a>
-            <a class="btn" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i
+            <a class="btn btn-default" data-edit="justifycenter" title="" data-original-title="Center (Ctrl/Cmd+E)"><i
                     class="fa fa-align-center"></i></a>
-            <a class="btn" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i
+            <a class="btn btn-default" data-edit="justifyright" title="" data-original-title="Align Right (Ctrl/Cmd+R)"><i
                     class="fa fa-align-right"></i></a>
-            <a class="btn" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i
+            <a class="btn btn-default" data-edit="justifyfull" title="" data-original-title="Justify (Ctrl/Cmd+J)"><i
                     class="fa fa-align-justify"></i></a>
         </div>
         <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown" title="" data-original-title="Hyperlink"><i
                     class="fa fa-link"></i></a>
 
-            <div class="dropdown-menu input-append">
-                <input class="col-md-2" placeholder="URL" type="text" data-edit="createLink">
-                <button class="btn" type="button">Add</button>
-            </div>
-            <a class="btn" data-edit="unlink" title="" data-original-title="Remove Hyperlink"><i
-                    class="fa fa-cut"></i></a>
-
         </div>
 
         <div class="btn-group">
-            <a class="btn" title="" id="pictureBtn" data-original-title="Insert picture (or just drag &amp; drop)"><i
-                    class="fa fa-picture"></i></a>
-            <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage"
-                   style="opacity: 0; position: absolute; top: 0px; left: 0px; width: 34px; height: 30px;">
-        </div>
-        <div class="btn-group">
-            <a class="btn" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i
+            <a class="btn btn-default" data-edit="undo" title="" data-original-title="Undo (Ctrl/Cmd+Z)"><i
                     class="fa fa-undo"></i></a>
-            <a class="btn" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
+            <a class="btn btn-default" data-edit="redo" title="" data-original-title="Redo (Ctrl/Cmd+Y)"><i class="fa fa-repeat"></i></a>
         </div>
     </div>
     <div class="editor form-control" id="<k>ID</k>">
