Various fixes. CBR shutdown

--- a/src/Assets/Entity/Disallow.html
+++ b/src/Assets/Entity/Disallow.html
@@ -7,6 +7,11 @@
             <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
             <place>Content</place>
 
+            <div class="form-group">
+                <label for="Verdict">Вердикт:</label>
+                <textarea class="form-control" id="Verdict" name="Verdict"></textarea>
+            </div>
+
             <input type="submit" class="btn btn-success" value="Отклонить" />
             <a class="btn btn-danger">Я передумал</a>
         </form>
