--- a/src/Assets/Message/Main.html
+++ b/src/Assets/Message/Main.html
@@ -1,11 +1,9 @@
 <subtitle><l>Message.Control:Title</l></subtitle>
 <breadcrumb href="/messages"><l>Message.Control:Title</l></breadcrumb>
 
-<div class="toolbar btn-group-lg">
+<div class="btn-toolbar pull-left">
     <a class="btn btn-primary" href="/message/new">Создать сообщение</a>
-
     <a class="btn btn-default" href="/messages/inbox">Входящие</a>
-
     <a class="btn btn-default" href="/messages/outbox">Исходящие</a>
 </div>
 
