--- a/src/Assets/Message/Show/Full.html
+++ b/src/Assets/Message/Show/Full.html
@@ -1,24 +1,35 @@
 <subtitle><k>Subject</k></subtitle>
 <breadcrumb href="/message/<k>ID</k>"><k>Subject</k></breadcrumb>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <k>Subject</k>
-        </div>
-        <div class="panel-body">
-            <k>Body</k>
-        </div>
-        <div class="panel-footer">
-            <entity>User:<k>User</k></entity>
-                &nbsp;<span class="glyphicon glyphicon-chevron-right"></span>&nbsp;
-            <entity>User:<k>Target</k></entity>
-            <div class="pull-right">
-                <datetime><k>Created</k></datetime>
-                <block>
-                    <strong>Прочитано:</strong> <datetime><k>Readed</k></datetime>
-                </block>
-            </div>
+
+<div class="btn-toolbar pull-right">
+    <a class="btn btn-danger" href="/message/delete/<k>ID</k>">
+        <l>Message.Delete:Title</l>
+    </a>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <k>Subject</k>
+        <div class="pull-right">
+            <block>
+                <strong>Прочитано:</strong> <datetime><k>Readed</k></datetime>
+            </block>
         </div>
     </div>
+    <div class="panel-body">
+        <k>Body</k>
+    </div>
+    <div class="panel-footer">
+        <entity>User:<k>User</k></entity>
+            &nbsp;<span class="glyphicon glyphicon-chevron-right"></span>&nbsp;
+        <entity>User:<k>Target</k></entity>
+        <div class="pull-right">
+            <datetime><k>Created</k></datetime>
+        </div>
+    </div>
+</div>
 
 <exec>
     <Service>Entity.Create</Service>
