--- a/src/Assets/Message/Main.html
+++ b/src/Assets/Message/Main.html
@@ -1,7 +1,7 @@
 <subtitle><l>Message.Control:Title</l></subtitle>
 <breadcrumb href="/messages"><l>Message.Control:Title</l></breadcrumb>
 
-<div class="btn-toolbar pull-left">
+<div class="btn-toolbar">
     <a class="btn btn-primary" href="/message/new">Создать сообщение</a>
     <a class="btn btn-default" href="/messages/inbox">Входящие</a>
     <a class="btn btn-default" href="/messages/outbox">Исходящие</a>
