--- a/src/Assets/bootstrap3/Widgets/TagCloud/Leveled/Tags.html
+++ b/src/Assets/bootstrap3/Widgets/TagCloud/Leveled/Tags.html
@@ -1,3 +1,1 @@
-<a class="tagcloud tagcloud-level-<k>Level</k>" href="/services/tag/<k>Value</k>">
-    <k>Value</k>
-</a>&nbsp;
+<a class="tagcloud tagcloud-level-<k>Level</k>" href="/services/tag/<k>Value</k>"><k>Value</k></a>&nbsp;
