--- a/src/Assets/User/Created.html
+++ b/src/Assets/User/Created.html
@@ -1,3 +1,11 @@
 <subtitle><l>User.Create:Finished</l></subtitle>
 <breadcrumb href="/user/created"></breadcrumb>
-<a class="btn btn-default" href="/login"><l>User.Login:Title</l></a>
+<div class="alert alert-info">
+    <h4>Проверьте почту!</h4>
+    На ящик <call>Data.0.EMail</call> письмо с данными для активации.
+</div>
+
+<div class="btn-toolbar">
+    <a class="btn btn-default" href="/login"><l>User.Login:Title</l></a>
+    <a class="btn btn-default" href="/">Продолжить работу</a>
+</div>
