--- a/src/Assets/Session/Control/Show/Short.html
+++ b/src/Assets/Session/Control/Show/Short.html
@@ -6,8 +6,11 @@
         <datetime><k>Expire</k></datetime>
     </td>
     <td>
+        <k>Channel</k>
+    </td>
+    <td>
         <block>
-            <img src="http://codeine-framework.ru/utils/ip-flag/<k>IP</k>" width="16" height="11"/> &nbsp;
+            <img src="/utils/ip-flag/<k>IP</k>" width="16" height="11"/> &nbsp;
             <k>IP</k>
         </block>
     </td>
