--- a/src/Assets/Session/Control/Table.html
+++ b/src/Assets/Session/Control/Table.html
@@ -3,6 +3,7 @@
         <tr>
             <th><l>Session.Entity:Created</l></th>
             <th><l>Session.Entity:Expire</l></th>
+            <th><l>Session.Entity:Channel</l></th>
             <th><l>Session.Entity:IP</l></th>
             <th><l>Session.Entity:User</l></th>
             <th><l>Session.Control:Actions</l></th>
