--- a/src/Assets/bootstrap3/Widgets/Form.html
+++ b/src/Assets/bootstrap3/Widgets/Form.html
@@ -1,5 +1,5 @@
 <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <block>
             <div class="panel-heading">
                 <call>FormTitle</call>
