--- a/src/Assets/bootstrap3/Widgets/Form/Textfield.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Textfield.html
@@ -1,6 +1,7 @@
 <div class="form-group">
     <label for="<k>Name</k>"> <l><k>Label</k></l>: <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
-    <div class="controls">
-        <k>HTML</k>
-    </div>
+    <k>HTML</k>
+    <if value="<k>Help</k>" eq="1">
+        <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
+    </if>
 </div>
