--- a/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Radiogroup.html
@@ -3,4 +3,7 @@
     <div class="<k>RadioGroupClass</k>">
         <k>Radios</k>
     </div>
+    <if value="<k>Help</k>" eq="1">
+        <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
+    </if>
 </div>
