--- a/src/Assets/bootstrap3/Widgets/Form/Textarea.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Textarea.html
@@ -3,4 +3,7 @@
         <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
     </label>
     <k>HTML</k>
+    <if value="<k>Help</k>" eq="1">
+        <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
+    </if>
 </div>
