--- a/src/Assets/bootstrap3/Widgets/Form/Select.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Select.html
@@ -3,4 +3,7 @@
     <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>" class="form-control">
         <k>Options</k>
     </select>
+    <if value="<k>Help</k>" eq="1">
+        <div class="help-block"><l><k>Entity</k>.Help:<k>Key</k></l></div>
+    </if>
 </div>
