--- a/src/Assets/Article/Category.html
+++ b/src/Assets/Article/Category.html
@@ -3,8 +3,8 @@
 <h2 class="page-header"><l>Article.Entity:Category</l>: <call>Where.Category</call></h2>
 
 <div class="row">
-    <div class="col-md-8"><place>Content</place></div>
-    <div class="col-md-4">
+    <div class="col-lg-8"><place>Content</place></div>
+    <div class="col-lg-4">
         <exec>
             <Service>Entity.Catalog</Service>
             <Method>Do</Method>
