--- a/src/Assets/Article/Show/Full.html
+++ b/src/Assets/Article/Show/Full.html
@@ -6,7 +6,7 @@
 
 <h2 class="page-header"><k>Title</k></h2>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-lg-8">
         <div class="panel panel-default">
             <div class="panel-body">
                 <article>
@@ -24,7 +24,7 @@
         </div>
 
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
         <ul class="nav nav-stacked">
             <li><a class="nav-header" href="/articles/category/<k>Category</k>">Рубрика: <k>Category</k></a></li>
             <exec>
