--- a/src/Assets/Comment/Show/Include.html
+++ b/src/Assets/Comment/Show/Include.html
@@ -1,10 +1,10 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-lg-1">
                 <entity template="Avatar">User:<k>User</k></entity>
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <k>Body</k>
             </div>
         </div>
