--- a/src/Assets/Country/Show/Full.html
+++ b/src/Assets/Country/Show/Full.html
@@ -4,5 +4,5 @@
 <h1><k>Title</k></h1>
 
 <div class="row">
-    <img src="http://maps.googleapis.com/maps/api/staticmap?center=<k>Title</k>&zoom=2&size=1000x100&sensor=false" class="col-md-12 img-rounded" height="100"/>
+    <img src="http://maps.googleapis.com/maps/api/staticmap?center=<k>Title</k>&zoom=2&size=1000x100&sensor=false" class="col-lg-12 img-rounded" height="100"/>
 </div>
