--- a/src/Assets/Invoice/Show/Full.html
+++ b/src/Assets/Invoice/Show/Full.html
@@ -36,15 +36,15 @@
     </div>
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <h6><l>Invoice.Entity:Created</l></h6>
                 <datetime><k>Created</k></datetime>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <h6><l>Invoice.Entity:Expire</l></h6>
                 <datetime><k>Expire</k></datetime>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <h6><l>Invoice.Entity:Status.Label</l></h6>
                 <l>Invoice.Entity:Status.<k>Status</k></l>
             </div>
@@ -53,12 +53,12 @@
 
     <div class="panel-body">
          <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <h6><l>Invoice.Entity:Total</l></h6>
                 <number><k>Total</k></number> <call>Project.Currency</call>
             </div>
             <block>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                     <h6><l>Invoice.Entity:Object</l></h6>
                     <entity><k>Object.Entity</k>:<k>Object.Where</k></entity>
                 </div>
