--- a/src/Assets/Notify/Show/Short.html
+++ b/src/Assets/Notify/Show/Short.html
@@ -1,11 +1,11 @@
 <tr>
-    <td class="col-md-2">
+    <td class="col-lg-2">
         <datetime engine="Period"><k>Created</k></datetime>
     </td>
-    <td class="col-md-3">
+    <td class="col-lg-3">
         <k>Title</k>
     </td>
-    <td class="col-md-8">
+    <td class="col-lg-8">
         <k>Text</k>
     </td>
 </tr>
