--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-lg-1">
                  <image>
                     <Source>
                         <Storage>Upload</Storage>
@@ -14,7 +14,7 @@
                     <Class>img img-responsive</Class>
                 </image>
             </div>
-            <div class="col-md-11">
+            <div class="col-lg-11">
                 <h2>
                     <k>Title</k>
                 </h2>
