--- a/src/Assets/User/Show/Cabinet.html
+++ b/src/Assets/User/Show/Cabinet.html
@@ -3,7 +3,7 @@
 
 <h2 class="page-header"><k>Title</k></h2>
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-lg-3">
         <ul class="nav nav-stacked">
             <access Service="Control.Panel" Method="Do">
                 <li><a href="/control">ЦУП</a></li>
@@ -14,7 +14,7 @@
             <li><a href="/logout">Выход</a></li>
         </ul>
     </div>
-    <div class="col-md-9">
+    <div class="col-lg-9">
 
     </div>
 </div>
