--- a/src/Assets/Article/List.html
+++ b/src/Assets/Article/List.html
@@ -1,7 +1,7 @@
 <h2 class="page-header"><l><call>Entity</call>.Control:Title</l></h2>
 <div class="row">
-    <div class="col-md-8"><place>Content</place></div>
-    <div class="col-md-4">
+    <div class="col-lg-8"><place>Content</place></div>
+    <div class="col-lg-4">
         <exec>
             <Service>Entity.Catalog</Service>
             <Method>Do</Method>
