--- a/src/Assets/Message/Control/Show/Full.html
+++ b/src/Assets/Message/Control/Show/Full.html
@@ -1,10 +1,10 @@
 <subtitle><k>Subject</k></subtitle>
 <breadcrumb href="/message/<k>ID</k>"><k>Subject</k></breadcrumb>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <k>Body</k>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <table class="table table-striped">
             <tr>
                 <td>От</td>
