--- a/src/Assets/Message/Control/Table.html
+++ b/src/Assets/Message/Control/Table.html
@@ -1,10 +1,10 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th class="col-md-2">От</th>
-            <th class="col-md-2">Кому</th>
-            <th class="col-md-6">Тема</th>
-            <th class="col-md-2">Дата</th>
+            <th class="col-lg-2">От</th>
+            <th class="col-lg-2">Кому</th>
+            <th class="col-lg-6">Тема</th>
+            <th class="col-lg-2">Дата</th>
         </tr>
     </thead>
     <tbody>
