--- a/src/Assets/Report/Panel.html
+++ b/src/Assets/Report/Panel.html
@@ -15,10 +15,10 @@
 </div>
 <div class="page-content">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-lg-3">
             <div class="hidden-print"><place>Navigation</place></div>
         </div>
-        <div class="col-md-9">
+        <div class="col-lg-9">
             <div class="hidden-print"><place>Sidebar</place></div>
             <place>Content</place>
         </div>
