--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -4,7 +4,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-lg-2">
                 <image>
                     <Source>
                         <Storage>Upload</Storage>
@@ -18,7 +18,7 @@
                     <Class>img img-responsive</Class>
                 </image>
             </div>
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <h2>
                     <k>Title</k>
                 </h2>
