--- a/src/Assets/bootstrap3/Widgets/Form/Password/Two.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Password/Two.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="form-group">
             <label for="<k>Name</k>"> <l><k>Label</k></l>:</label>
                 <input class="form-control"
@@ -14,7 +14,7 @@
                         <block>pattern="<k>Regex</k>"</block> />
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
         <div class="form-group">
             <label for="<k>Name</k>2"> Повторите пароль:</label>
                 <input data-equals="<k>Name</k>"
