--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -11,18 +11,17 @@
             <div class="form-group">
                 <label for="Password"><l>User.Entity:Password.First</l>:</label>
                 <input class="form-control input-lg" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
+                <a href="/forgot" class="help-block"><l>User.Reset:Title</l></a>
             </div>
 
             <div class="form-group">
                 <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long"> <l>Security.Auth.System.Password:Remember</l></label>
             </div>
-
-            <button type="submit" class="btn btn-success"><l>Security.Auth.System.Password:Submit</l></button>
+            <button type="submit" class="btn btn-lg btn-block btn-success"><l>Security.Auth.System.Password:Submit</l></button>
+            <if value="<call>Project.Join.Open</call>" eq="1">
+                <a class="btn btn-lg btn-block btn-default" href="/join"><l>User.Create:Title</l></a>
+            </if>
             <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
-            <div class="pull-right">
-                <a class="btn btn-primary" href="/join"><l>User.Create:Title</l></a>
-                <a class="btn btn-warning" href="/forgot"><l>User.Reset:Title</l></a>
-            </div>
         </form>
     </div>
 </div>
