--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -36,8 +36,9 @@
         </div>
         <div class="col-lg-10">
             <place>Sidebar</place>
-            <div class="spacer"></div>
-            <place>Content</place>
+            <div class="tab-pane">
+                <place>Content</place>
+            </div>
         </div>
     </div>
 </div>
