--- a/src/Assets/Entity/Import.html
+++ b/src/Assets/Entity/Import.html
@@ -1,17 +1,12 @@
 <form role="form" method="post" action="" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-default">
-        <block>
-            <div class="panel-heading">
-                <k>Title</k>
-            </div>
-        </block>
         <div class="panel-body">
             <input type="hidden" name="BackURL" value="<k>BackURL</k>" />
-            <textarea name="Data"></textarea>
+            <textarea name="Data" class="form-control">{}</textarea>
         </div>
         <div class="panel-footer">
             <button type="submit" class="btn btn-large btn-success">
-                <l><k>Entity</k>.Control:Options.<k>Purpose</k></l>
+                <l><k>Entity</k>.Control:Options.Import</l>
             </button>
             <a class="btn btn-default" href="<k>BackURL</k>">Назад</a>
         </div>
