--- a/src/Assets/Codeine/Control/Do.html
+++ b/src/Assets/Codeine/Control/Do.html
@@ -1,2 +1,6 @@
-<h2 class="page-header">Новости системы</h2>
+<h1 class="page-header">Codeine</h1>
+<blockquote>
+    <l>Codeine.Control:Disclaimer</l>
+</blockquote>
+<h2>Версия</h2>
 <place>Content</place>
