--- a/src/Assets/Entity/Delete.html
+++ b/src/Assets/Entity/Delete.html
@@ -1,9 +1,11 @@
 <form role="form" method="post" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-danger">
         <div class="panel-heading">
-            Удалить эти объекты?
+            <l>Entity.Delete:Confirm</l>
         </div>
-        <place>Content</place>
+        <div class="panel-body">
+            <place>Content</place>
+        </div>
         <div class="panel-footer">
             <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
             <button type="submit" class="btn btn-danger">Удалить</button>
