--- a/src/Assets/bootstrap3/Widgets/Navlist/Element.html
+++ b/src/Assets/bootstrap3/Widgets/Navlist/Element.html
@@ -10,6 +10,6 @@
             <Class>img</Class>
         </image>
         <k>Title</k>
-        <block><span class="badge pull-right"><k>Count</k></span></block>
+        <block><span class="label label-<k>Status</k> pull-right"><k>Count</k></span></block>
     </a>
 </li>
