--- a/src/down.html
+++ b/src/down.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 <body>
-<img src="http://one2team.ru/down.png" alt="Ведутся технические работы"/>
+<img src="http://trickyplan.ru/down.png" alt="Ведутся технические работы"/>
 <!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
