--- a/src/Assets/Project/Zone.html
+++ b/src/Assets/Project/Zone.html
@@ -25,9 +25,9 @@
         <place>Content</place>
 
         <ul class="nav nav-pills">
-            <li><a href="http://one2team.ru">Сайт ONE2TEAM</a></li>
-            <li><a href="http://task.one2team.ru/projects/codeine">Таск-трекер Codeine</a></li>
-            <li><a href="http://task.one2team.ru/projects/codeine/wiki">Codeine Wiki</a></li>
+            <li><a href="http://trickyplan.ru">Хитрый план</a></li>
+            <li><a href="http://task.trickyplan.ru/projects/codeine">Таск-трекер Codeine</a></li>
+            <li><a href="http://wiki.codeine-framework.ru/">Codeine Wiki</a></li>
         </ul>
     </div>
 </div>
