--- a/src/Assets/Errors/404.html
+++ b/src/Assets/Errors/404.html
@@ -1,7 +1,11 @@
 <breadcrumb href="<call>HTTP.URL</call>">Ошибка 404</breadcrumb>
-<subtitle>Ошибка 404</subtitle>
-
-<h2>Ошибка 404</h2>
+<subtitle>404: Страница не найдена</subtitle>
+<keyword>ошибка, ошибка 404, страница не найдена</keyword>
+<description>Это страница ошибки 404.
+    Вы обратились к странице, которой нет.<br/>
+    Возможно, вы опечатались, либо страница была удалена.
+</description>
+<h2><header/></h2>
 
 <h3>Что случилось?</h3>
 Вы обратились к странице, которой нет.<br/>
