--- a/src/Assets/bootstrap3/Main.html
+++ b/src/Assets/bootstrap3/Main.html
@@ -13,6 +13,7 @@
 
     <layout>Project:OpenSearch</layout>
     <layout>Project:OpenGraph</layout>
+    <layout>Project:Head</layout>
 
     <description/>
 
