--- a/src/Assets/bootstrap3/Widgets/Form/Redactor.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Redactor.html
@@ -1,6 +1,5 @@
 <css>redactor</css>
-<js>redactor</js>
-<js>redactor:ru</js>
+<js>redactor:min</js>
 
 <div class="form-group">
     <label for="<k>ID</k>"><l><k>Label</k>:</l>
