Performance renaming finished.

--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,19 +1,23 @@
-<div class="topbar btn-group-vertical btn-group-lg hidden-print">
-    <a class="btn btn-primary"
-       href="/control/<call>Entity</call>">
-        <i class="icon glyphicon glyphicon-wrench" data-toggle="tooltip" title="ЦУП"></i>
+<div class="btn-group-vertical btn-group-lg hidden-print control-bar">
+    <a class="btn btn-default" href="/control/<call>Entity</call>"
+       data-toggle="tooltip" data-title="ЦУП" data-placement="left">
+        <span class="fa fa-wrench"></span>
     </a>
     <a class="btn btn-default"
-       href="/control/<call>Entity</call>/Touch/<k>ID</k>">
-        <i class="icon glyphicon glyphicon-refresh" data-toggle="tooltip" title="Обновить"></i>
+       href="/control/<call>Entity</call>/Touch/<k>ID</k>"
+        data-toggle="tooltip" data-title="Обновить" data-placement="left">
+        <span class="fa fa-refresh"></span>
     </a>
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
-        <i class="icon glyphicon glyphicon-eye-open" data-toggle="tooltip" title="Просмотреть"></i>
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>"
+       data-toggle="tooltip" data-title="Просмотреть" data-placement="left">
+        <span class="fa fa-eye"></span>
     </a>
-    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>">
-        <i class="icon glyphicon glyphicon-pencil" data-toggle="tooltip" title="Редактировать"></i>
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>"
+       data-toggle="tooltip" data-title="Редактировать" data-placement="left">
+        <span class="fa fa-pencil"></span>
     </a>
-    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>">
-        <i class="icon glyphicon glyphicon-trash" data-toggle="tooltip" title="Удалить"></i>
+    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>"
+       data-toggle="tooltip" data-title="Удалить" data-placement="left">
+        <span class="fa fa-trash-o"></span>
     </a>
 </div>
