--- a/src/Assets/Errors/403.html
+++ b/src/Assets/Errors/403.html
@@ -10,8 +10,7 @@
 <div class="alert alert-success">
     <h4>Что делать?</h4>
     Попробовать любую другую.
-
-    <div>
-        <strong>P.S. Команда сайта извещена об инциденте.</strong>
-    </div>
+</div>
+<div class="label label-warning pull-right">
+    P.S. Команда сайта извещена об инциденте.
 </div>
