--- a/src/Assets/Errors/404.html
+++ b/src/Assets/Errors/404.html
@@ -5,14 +5,19 @@
     Вы обратились к странице, которой нет.<br/>
     Возможно, вы опечатались, либо страница была удалена.
 </description>
-<h2><header/></h2>
+<h2 class="page-header"><header/></h2>
 
-<h3>Что случилось?</h3>
-Вы обратились к странице, которой нет.<br/>
+<div class="alert alert-danger">
+    <h4>Что случилось?</h4>
+    Вы обратились к странице, которой нет.<br/>
 Возможно, вы опечатались, либо страница была удалена.
-<hr/>
+</div>
 
-<h3>Что делать?</h3>
-Можно попробовать начать с <a href="/">главной</a>.
+<div class="alert alert-success">
+    <h4>Что делать?</h4>
+    Можно попробовать начать с <a href="/">главной</a>.
+</div>
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<div class="label label-warning pull-right">
+    P.S. Команда сайта извещена об инциденте.
+</div>
