--- a/src/Assets/User/Created.html
+++ b/src/Assets/User/Created.html
@@ -2,7 +2,7 @@
 <breadcrumb href="/user/created"></breadcrumb>
 <div class="alert alert-info">
     <h4>Проверьте почту!</h4>
-    На ящик <call>Data.0.EMail</call> письмо с данными для активации.
+    На ящик <call>Data.0.EMail</call> выслано письмо с данными для активации.
 </div>
 
 <div class="btn-toolbar">
