--- a/src/Assets/Payment/Russia/Wire.html
+++ b/src/Assets/Payment/Russia/Wire.html
@@ -50,19 +50,20 @@
         <div class="row">
             <div class="col-lg-6">
                 <h6><l>Payment.Russia.Wire:Destination</l></h6>
-                <l>Payment.Russia.Wire:Payin</l> <entity><call>Entity</call>:<call>Where</call></entity>.
+                <l>Payment.Russia.Wire:Payin</l> <call>Where</call>.
                 <if value="<call>Receiver.Company.VAT</call>" eq="">
                     <l>Payment.Russia.Wire:VAT.No</l>
                 </if>
             </div>
             <div class="col-lg-6">
                 <h6><l>Payment.Russia.Wire:Total</l></h6>
-                <number><k>Costs</k></number> <call>Project.Currency</call>
+                <number digits="2"><call>Payment.Value</call></number> <call>Project.Currency</call>
             </div>
         </div>
     </div>
-    <div class="alert alert-info">
-        <h4><l>Payment.Russia.Wire:Disclaimer.Title</l></h4>
-        <l>Payment.Russia.Wire:Disclaimer.Text</l>
-    </div>
+</div>
+
+<div class="alert alert-info">
+    <h4><l>Payment.Russia.Wire:Disclaimer.Title</l></h4>
+    <l>Payment.Russia.Wire:Disclaimer.Text</l>
 </div>
