--- a/src/Assets/User/Reset/Form.html
+++ b/src/Assets/User/Reset/Form.html
@@ -1,4 +1,5 @@
-<h2 class="page-header">Восстановление пароля</h2>
+<subtitle>Восстановление пароля</subtitle>
+<h2 class="page-header"><header/></h2>
 <div class="panel panel-default">
     <div class="panel-body">
         <form role="form" action="" method="post">
