Loginza with HTTPS.

--- a/src/Assets/Security/Auth/System/Loginza.html
+++ b/src/Assets/Security/Auth/System/Loginza.html
@@ -1,5 +1,5 @@
 <place>Content</place>
-<script src="http://loginza.ru/js/widget.js" type="text/javascript"></script>
+<script src="<call>HTTP.Proto</call>loginza.ru/js/widget.js" type="text/javascript"></script>
 <div class="panel panel-default">
     <div class="panel-heading">
         Войдите с помощью стороннего аккаунта
