Loginza with HTTPS.

--- a/src/Assets/Security/Auth/System/Loginza.html
+++ b/src/Assets/Security/Auth/System/Loginza.html
@@ -5,7 +5,7 @@
         Войдите с помощью стороннего аккаунта
     </div>
     <div class="panel-body">
-        <iframe src="<call>HTTP.Proto</call>loginza.ru/api/widget?overlay=loginza&token_url=<call>LoginzaURL</call>?BackURL=<call>BackURL</call>"
+        <iframe src="<call>HTTP.Proto</call>loginza.ru/api/widget?overlay=loginza&token_url=<call>LoginzaURL</call>&BackURL=<call>BackURL</call>"
                 style="width:100%; " scrolling="no" frameborder="no"></iframe>
     </div>
 </div>
