--- a/src/Assets/Entity/Touch.html
+++ b/src/Assets/Entity/Touch.html
@@ -1,2 +1,9 @@
-<h2>Обновлённые элементы</h2>
-<place>Content</place>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        Обновлённые элементы
+    </div>
+    <div class="panel-body">
+
+        <place>Content</place>
+    </div>
+</div>
