--- a/src/Assets/Developer/Control/Do.html
+++ b/src/Assets/Developer/Control/Do.html
@@ -13,7 +13,7 @@
                         <a href="tel:<call>Developer.Phone</call>">Позвонить</a> &nbsp;
                     </div>
                     <div class="col-lg-4">
-                        <img class="img img-responsive pull-right" src="<call>Developer.URL</call>/logo.png" />
+                        <img class="img img-responsive pull-right" src="<call>Developer.Logo</call>" />
                     </div>
                 </div>
         </if>
