--- a/src/Assets/bootstrap3/Widgets/Form/Password.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Password.html
@@ -1,22 +1,26 @@
 <div class="form-group">
-            <label for="<k>Name</k>"> <l><k>Label</k>.First</l>:</label>
-                <input class="form-control"
-                       id="<k>Name</k>"
-                       type="password"
-                       data-minlength="4"
-                       name="<k>Name</k>"
-                       <block>required="<k>Required</k>"</block>
-                        autocomplete="off"
-                        value="<k>Value</k>"
-                        <block>placeholder="<k>Placeholder</k>"</block>
-                        <block>pattern="<k>Regex</k>"</block> />
-        </div>
+    <label for="<k>ID</k>"> <l><k>Label</k>.First</l>:</label>
+    <div class="input-group">
+        <input class="form-control"
+           id="<k>ID</k>"
+           type="password"
+           data-minlength="4"
+           name="<k>Name</k>"
+           <block>required="<k>Required</k>"</block>
+            autocomplete="off"
+            value="<k>Value</k>"
+            <block>placeholder="<k>Placeholder</k>"</block>
+            <block>pattern="<k>Regex</k>"</block> />
+    </div>
+</div>
 
 <div class="form-group">
-    <label for="<k>Name</k>2">
+    <label for="<k>ID</k>2">
         <l><k>Label</k>.Second</l>
     </label>
-        <input data-equals="<k>Name</k>"
+    <div class="input-group">
+        <input id="<k>ID</k>2" data-equals="<k>Name</k>"
                class="form-control" type="password" <block>required="<k>Required</k>"</block>
         autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать" />
+    </div>
 </div>
