--- a/src/Assets/bootstrap3/Widgets/Form.html
+++ b/src/Assets/bootstrap3/Widgets/Form.html
@@ -1,3 +1,4 @@
+<js>Default:form-prepare</js>
 <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
     <div class="panel panel-default">
         <block>
