--- a/src/Assets/Security/Auth/Password.html
+++ b/src/Assets/Security/Auth/Password.html
@@ -1,12 +1,12 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <l>Security.Auth.System.Password:Title</l> <call>Project.Title</call>
+        <l>Security.Auth.Password:Title</l> <k>Project.Title</k>
     </div>
     <div class="panel-body">
-        <form role="form" method="post" action="/login">
+        <form role="form" method="post" action="/authenticate/Password">
             <div class="form-group">
-                <label for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
-                <input class="form-control input-lg" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required" autofocus="autofocus"/>
+                <label for="<k>Determinant</k>"><l>User.Entity:<k>Determinant</k></l>:</label>
+                <input class="form-control input-lg" id="Determinant" type="text" name="<k>Determinant</k>" value="" required="required" autofocus="autofocus"/>
             </div>
             <div class="form-group">
                 <label for="Password"><l>User.Entity:Password.First</l>:</label>
@@ -15,13 +15,15 @@
             </div>
 
             <div class="form-group">
-                <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long"> <l>Security.Auth.System.Password:Remember</l></label>
+                <label class="checkbox" for="TTL"><input type="checkbox" name="Remember" id="TTL" value="Long">
+                    <l>Security.Auth.Password:Remember</l>
+                </label>
             </div>
-            <button type="submit" class="btn btn-lg btn-block btn-success"><l>Security.Auth.System.Password:Submit</l></button>
+            <button type="submit" class="btn btn-lg btn-block btn-success"><l>Security.Auth.Password:Submit</l></button>
             <if value="<call>Project.Join.Open</call>" eq="1">
                 <a class="btn btn-lg btn-block btn-default" href="/join"><l>User.Create:Title</l></a>
             </if>
-            <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
+            <input type="hidden" name="BackURL" value="<k>BackURL</k>" />
         </form>
     </div>
 </div>
