--- a/src/Assets/User/Authenticate/Guest.html
+++ b/src/Assets/User/Authenticate/Guest.html
@@ -2,6 +2,6 @@
 <breadcrumb href="/login"><l>User.Login:Title</l></breadcrumb>
 
 <exec>
-    <Service>Security.Auth.System.Password</Service>
+    <Service>Security.Auth.Password</Service>
     <Method>Identificate</Method>
 </exec>
