--- a/src/Assets/Entity/Import.html
+++ b/src/Assets/Entity/Import.html
@@ -6,7 +6,7 @@
         </div>
         <div class="panel-footer">
             <button type="submit" class="btn btn-large btn-success">
-                <l><k>Entity</k>.Control:Options.Import</l>
+                <l><call>Entity</call>.Control:Options.Import</l>
             </button>
             <a class="btn btn-default" href="<k>BackURL</k>">Назад</a>
         </div>
