--- a/src/Assets/User/Create.html
+++ b/src/Assets/User/Create.html
@@ -1,3 +1,3 @@
-<subtitle>Регистрация</subtitle>
-<breadcrumb href="/join">Регистрация</breadcrumb>
+<subtitle><l>User.Create:Title</l></subtitle>
+<breadcrumb href="/join"><l>User.Create:Title</l></breadcrumb>
 <place>Content</place>
