--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -37,6 +37,7 @@
         <div class="col-lg-10">
             <place>Sidebar</place>
             <div class="tab-pane">
+                <place>Message</place>
                 <place>Content</place>
             </div>
         </div>
