--- a/src/Assets/Article/Catalog.html
+++ b/src/Assets/Article/Catalog.html
@@ -1,4 +1,4 @@
+<h4><l><call>Entity</call>.Catalog:Header.<call>Key</call></l></h4>
 <ul class="nav nav-stacked">
-    <li class="nav-header"><l><call>Entity</call>.Catalog:Header.<call>Key</call></l></li>
     <place>Content</place>
 </ul>
